[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "earningscalendar"
authors = [{name = "David McKim", email = "davidmckim@gmail.com"}]
dynamic = ["version", "description"]

dependencies = [
    "pandas==2.2.3",
    "psycopg2-binary>=2.9.9",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "requests==2.32.3",
    "numpy==2.1.1",
]